# langchain-cratedb

./: .gitignore  CHANGES.md  DEVELOP.md  Makefile  README.md  pyproject.toml
.github/actions/poetry_setup/: action.yml
.github/scripts/: check_diff.py
.github/workflows/: _codespell.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  ci.yml  release.yml
docs/: backlog.md  cache.ipynb  chat.ipynb  document_loaders.ipynb  llms.ipynb  loaders.ipynb  provider.ipynb  retrievers.ipynb  stores.ipynb  text_embedding.ipynb  toolkits.ipynb  tools.ipynb  troubleshooting.md  vectorstores.ipynb
examples/: cache.py  dummy.py
examples/basic/: cache.py  chat_history.py  document_loader.py  pdf.py  vector_huggingface.py  vector_openai.py  vector_search.py
langchain_cratedb/: __init__.py  cache.py  chat_history.py  chat_models.py  document_loaders.py  embeddings.py  retrievers.py  toolkits.py  tools.py  vectorstores.py
langchain_cratedb/vectorstores/: __init__.py  main.py  multi.py
tests/: conftest.py  data.py  settings.py  test_docs.py  test_examples.py  utils.py
tests/feature/: test_chat_history.py  test_loaders.py  test_retrievers.py
tests/feature/cache/: fake_embeddings.py  test_semantic_cache.py  test_standard_mcsa_cache.py  test_standard_sqlite_cache.py
tests/feature/vectorstore/: test_vector_cratedb_main.py  test_vector_cratedb_multi.py  test_vector_standard.py  util.py
tests/fixtures/: Universal_Declaration_of_Human_Rights.txt  data.py  metadata_filtering.py
tests/integration_tests/: conftest.py  test_chat_message_histories.py  test_chat_models.py  test_embeddings.py  test_retrievers.py  test_tools.py  test_vectorstores.py
tests/integration_tests/cache/: test_semantic_cache.py  test_standard_mcsa_cache.py  test_standard_sqlite_cache.py
tests/integration_tests/vectorstore/: fake_embeddings.py  util.py  (+3 more)
tests/unit_tests/: test_chat_models.py  test_embeddings.py  test_placeholder.py  test_tools.py
tests/util/: notebook.py  pytest.py  python.py
