[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-cratedb"
version = "0.0.0"
description = "An integration package connecting CrateDB and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/crate/langchain-cratedb"
license = "MIT"

[tool.mypy]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.poetry.urls]
"Source Code" = "https://github.com/crate/langchain-cratedb"
"Release Notes" = "https://github.com/crate/langchain-cratedb/releases"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-community = "<0.4"
langchain-core = "<0.4"
langchain-postgres = "==0.0.12"
sqlalchemy-cratedb = ">=0.40.1"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = [
    "langchain_cratedb/retrievers.py",
    "tests/*",
]

[tool.pytest.ini_options]
addopts = """
  --strict-markers --strict-config --durations=5
  --cov --cov-report=term-missing --cov-report=xml
"""
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
log_level = "DEBUG"
log_cli_level = "DEBUG"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "<9"
langchain-tests = "==0.3.7"
pytest-asyncio = "<0.26"
pytest-mock = "<4"
pytest-rerunfailures = "<16"
pytest-socket = "<0.8"
pytest-watcher = "<0.5"
pytest-cov = "<7"

[tool.poetry.group.codespell.dependencies]
codespell = "<2.4"

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint.dependencies]
ruff = "<0.6"

[tool.poetry.group.typing.dependencies]
mypy = "<1.11"
